Fix light box not showing up from button after image click, and add a signup sheet area to button lightbox

--- a/styles.css
+++ b/styles.css
@@ -293,8 +293,8 @@ p {
 
 #signUpSheetDiv {
     background-color: #F9FAF8;
-    width: 50%;
-    height: auto;
+    width: 80%;
+    height: 80%;
 }
  
 /*TOGGLE VISIBILITY */
